# talos-rl

./: .git-blame-ignore-revs  .gitignore  .mergify.yml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  schedule.sh
.github/workflows/: release.yml  test.yml
apptainer/: env.yaml  requirements.txt  rl.def  rl_mamba.def  rl_poetry.def
config/: config_RL.yaml
gym_talos/: __init__.py  __main__.py  config_RL.yaml  display.py
gym_talos/envs/: __init__.py  env_talos_base.py  env_talos_deburring.py  env_talos_mpc_deburring.py
gym_talos/simulator/: bullet_Talos.py
gym_talos/utils/: modelLoader.py
pfCalcul/: README.md  schedule.sh
